--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# added by LuYF-Lemon-love <luyanfeng_nlp@qq.com> on August 20, 2023
+DeepSpeed-Chat/output
