--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,6 @@ dmypy.json
 # added by LuYF-Lemon-love <luyanfeng_nlp@qq.com> on August 20, 2023
 DeepSpeed-Chat/output
 DeepSpeed-Chat/rm-static
+DeepSpeed-Chat/opt-350m
 DeepSpeed-Chat/opt-1.3b
 DeepSpeed-Chat/training/step1_supervised_finetuning/output
