--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ dmypy.json
 
 # added by LuYF-Lemon-love <luyanfeng_nlp@qq.com> on August 20, 2023
 chatgpt/rm-static
-chatgpt/rm-static-m2m100-zh-jianti
+chatgpt/rm-static-zh
 chatgpt/Zhihu-KOL
 chatgpt/HC3-Chinese
 chatgpt/opt-350m
