--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,7 @@ chatgpt/HC3-Chinese
 chatgpt/opt-350m
 chatgpt/opt-1.3b
 chatgpt/bloom-1b1
+chatgpt/bloom-1b4-zh
 chatgpt/output
 chatgpt/training/step1_supervised_finetuning/output
 chatgpt/training/step2_reward_model_finetuning/output
